# dokuUpload

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/dokuUpload.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/dokuUpload/cli/: cli.py  cli.py.bak
src/dokuUpload/doku/: __init__.py  upload.py  utils.py
src/dokuUpload/gpt/: __init__.py  summarize.py  summarize.sh
src/dokuUpload/mimetypes/: __init__.py  dispatch.py
src/dokuUpload/mimetypes/ascii/: __init__.py  ascii.py
src/dokuUpload/mimetypes/jupyter/: __init__.py  jupyter.py
src/dokuUpload/utils/: setup.py
