[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dokuUpload"
description = "A simple tool to upload files to a dokuwiki and generate ai description pages"
authors = [{name = "Emily M. Boudreaux", email = "emily@boudreauxmail.com"}]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = [
  "openai",
  "dokuwiki",
  "nbconvert",
  "nbformat",
  "Ipython"
	]


[project.urls]
Homepage = "https://github.com/~tboudreaux/dokuUpload"

[project.scripts]
dokuUpload = "dokuUpload.cli.cli:main"

[tool.setuptools.dynamic]
version = {attr = "dokuUpload.__version__"}
